[package]
name = "zn"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "files", "cdn", "cloud-storage", "wasabi"]
categories = ["command-line-utilities"]
description = "CLI for Files - CDN Origin Server for Cloud Storage"
repository = "https://github.com/apibillme/zn"
readme = "README.md"

[dependencies]
