[package]
name = "pk"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "upcloud", "ec2", "provision"]
categories = ["command-line-utilities"]
description = "CLI for Provision"
repository = "https://github.com/apibillme/pk"
readme = "README.md"

[dependencies]
